override child rows

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "php": "~7.0",
     "chubbyphp/chubbyphp-api-http": "~1.0@beta",
     "chubbyphp/chubbyphp-deserialization": "~1.1",
-    "chubbyphp/chubbyphp-deserialization-model": "~1.0",
+    "chubbyphp/chubbyphp-deserialization-model": "~1.1",
     "chubbyphp/chubbyphp-lazy": "~1.1",
     "chubbyphp/chubbyphp-model": "~3.0",
-    "chubbyphp/chubbyphp-model-doctrine-dbal": "~1.0",
+    "chubbyphp/chubbyphp-model-doctrine-dbal": "^1.0.1",
     "chubbyphp/chubbyphp-serialization": "^1.0.1",
     "chubbyphp/chubbyphp-translation": "^1.1.2",
     "chubbyphp/chubbyphp-validation": "~2.1",
