--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,12 @@
     "chubbyphp/chubbyphp-serialization": "^1.0.1",
     "chubbyphp/chubbyphp-translation": "^1.1.2",
     "chubbyphp/chubbyphp-validation": "~2.1",
-    "chubbyphp/chubbyphp-validation-model": "~1.0",
-    "monolog/monolog": "~1.21",
-    "ramsey/uuid": "~3.5",
+    "chubbyphp/chubbyphp-validation-model": "^1.0.2",
+    "monolog/monolog": "~1.5",
     "silex/providers": "^2.0.3",
-    "slim/slim": "~3.5",
-    "symfony/console": "~3.1",
-    "symfony/yaml": "~3.1",
-    "willdurand/negotiation": "^2.3"
+    "slim/slim": "~3.0",
+    "symfony/console": "~3.0|~2.8",
+    "symfony/yaml": "~3.0|~2.8"
   },
   "require-dev": {
         "phpunit/phpunit": "~6.3"
