--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
     "chubbyphp/chubbyphp-validation": "~2.1",
     "chubbyphp/chubbyphp-validation-model": "^1.0.2",
     "monolog/monolog": "~1.5",
+    "ramsey/uuid": "~3.0",
     "silex/providers": "^2.0.3",
     "slim/slim": "~3.0",
-    "symfony/console": "~3.0|~2.8",
-    "symfony/yaml": "~3.0|~2.8"
+    "symfony/console": "~2.7|~3.0",
+    "symfony/yaml": "~2.7|~3.0"
   },
   "require-dev": {
         "phpunit/phpunit": "~6.3"
