use chubbyphp negotiator

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "chubbyphp/chubbyphp-lazy": "~1.1",
     "chubbyphp/chubbyphp-model": "^3.0.1",
     "chubbyphp/chubbyphp-model-doctrine-dbal": "^1.0.2",
+    "chubbyphp/chubbyphp-negotiation": "~1.0@beta",
     "chubbyphp/chubbyphp-serialization": "^1.0.2",
     "chubbyphp/chubbyphp-translation": "^1.1.2",
     "chubbyphp/chubbyphp-validation": "~2.1",
@@ -21,7 +22,7 @@
     "symfony/yaml": "~2.7|~3.0"
   },
   "require-dev": {
-        "phpunit/phpunit": "~6.3"
+    "phpunit/phpunit": "~6.3"
   },
   "autoload": {
     "psr-4": { "Chubbyphp\\ApiSkeleton\\": "app/" }
