--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,12 @@
   "type": "project",
   "require": {
     "php": "~7.0",
-    "chubbyphp/chubbyphp-api-http": "~1.0@beta",
+    "chubbyphp/chubbyphp-api-http": "~1.0@beta,>=1.0-beta9",
     "chubbyphp/chubbyphp-deserialization": "^1.1.1",
     "chubbyphp/chubbyphp-deserialization-model": "~1.1",
     "chubbyphp/chubbyphp-lazy": "~1.1",
     "chubbyphp/chubbyphp-model": "^3.0.1",
     "chubbyphp/chubbyphp-model-doctrine-dbal": "^1.0.2",
-    "chubbyphp/chubbyphp-negotiation": "~1.0@beta",
     "chubbyphp/chubbyphp-serialization": "^1.0.2",
     "chubbyphp/chubbyphp-translation": "^1.1.2",
     "chubbyphp/chubbyphp-validation": "~2.1",
