--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -7,6 +7,10 @@ build:
                     file: 'coverage/clover.xml'
                     format: 'php-clover'
 
+    project_setup:
+        before:
+            - echo "USE mysql;\nUPDATE user SET password=PASSWORD('root') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql
+
 checks:
     php: true
 
