--- a/vagrant.yml
+++ b/vagrant.yml
@@ -1,4 +1,4 @@
-hostname: chubbyphp-api-slim-skeleton.dev 
+hostname: chubbyphp-api-slim-skeleton.development 
 application: slim3
 network:
     ip: 10.132.131.130
